--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,12 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>5.3.3.RELEASE</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
